--- a/public/chart.html
+++ b/public/chart.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Polar Area Chart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./stylesheets/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
