--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta charset="utf-8">
     <title>Test de dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
