--- a/public/chart.html
+++ b/public/chart.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+    <!--script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js" integrity="sha512-JPcRR8yFa8mmCsfrw4TNte1ZvF1e3+1SdGMslZvmrzDYxS69J7J49vkFL8u6u8PlPJK+H3voElBtUCzaXj+6ig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/chart.js-plugin-labels-dv/dist/chartjs-plugin-labels.min.js"></script>
     <script src="./javascripts/chart1.js"></script>
     <script src="./javascripts/chart3.js"></script>
     <script src="./javascripts/chart2.js"></script>
@@ -23,11 +25,11 @@
         </div>
         <div class="column">
         <h1>Great deal !</h1>
-                <canvas id="myBars"></canvas>
+                <canvas id="myRadarChart"></canvas>
         </div>
         <div class="column">
         <h1>Belle semaine</h1>
-                <canvas id="myRadarChart"></canvas>
+                <canvas id="myBars"></canvas>
         </div>
     </div>
 
