--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <h1 id="db_cri"></h1>
 
     <form id="submitForm" action="/submit" method="post">
-        <label for="name">Name:</label><br>
+        <label for="name">Nom :</label><br>
         <input type="text" id="name" name="name"><br>
         <input type="submit" value="Submit">
     </form>
