--- a/public/ls.html
+++ b/public/ls.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Polar Area Chart</title>
+    <title>LS - Reporting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./javascripts/lsapi.js"></script>
-    </script>
+    <script src="../lsapi.js"></script>
 </head>
 <body>
 </body>
