--- a/public/timediff.html
+++ b/public/timediff.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 id="db_cri"></h1>
-    <p>User time: <span id="userTime"></span></p>
+    <p>Temps machine cliente: <span id="userTime"></span></p>
     <p>Server time: <span id="serverTime"></span></p>
     <p>Difference: <span id="diff"></span></p>
+    <p>Session Key details: <span id="sessionKeyDetails"></span></p>
 </body>
 </html>
