json format + proposed token for test purposes and future examples

--- a/public/ls.html
+++ b/public/ls.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>LS - Reporting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../lsapi.js"></script>
+    <script src="./javascripts/lsapi.js"></script>
 </head>
 <body>
 </body>
