--- a/public/timediff.html
+++ b/public/timediff.html
@@ -11,6 +11,6 @@
     <p>Temps machine cliente: <span id="userTime"></span></p>
     <p>Server time: <span id="serverTime"></span></p>
     <p>Difference: <span id="diff"></span></p>
-    <p>Session Key details: <span id="sessionKeyDetails"></span></p>
+    <!--p>Session Key details: <span id="sessionKeyDetails"></span></p-->
 </body>
 </html>
